# BacktestingEngine

./: .gitignore  CODE_OF_CONDUCT.md  LICENSE  README.md
.github/: dependabot.yml
.github/workflows/: CI_to_Docker_Hub.yml  codeql-analysis.yml  main.yml
main/: Backtester.m  GetCoinbaseData.asv  GetCoinbaseData.m  RunBacktesting.asv  RunBacktesting.m  StratFile.m  bigCSVData.csv  main.m
main (MATLAB)/: GetCoinbaseData.m  RunBacktesting.m  bigCSVData.csv  main.m
main (Python)/: Backtester.py  BigCSVData.csv  GetCoinbaseData.py  StratFile.py  main.py  requirements.txt  setup.py
main_Python/: Backtester.py  FetchCoinbaseData.py  GetCoinbaseData.py  StratFile.py  main.py  requirements.txt  setup.py  window_dialog.py
main_Python/Backtesting/: Backtester.py
main_Python/Brownian_Motion/: brownian.py  brownian_motion.py
main_Python/Coinbase_Fetcher/: BigCSVData.csv  FetchCoinbaseData.py  StratFile.py
python_backtesting_engine/: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
python_backtesting_engine/src/python_backtesting_engine/: __main__.py  window_dialog.py
python_backtesting_engine/src/python_backtesting_engine/Backtesting/: Backtester.py
python_backtesting_engine/src/python_backtesting_engine/Brownian_Motion/: BrownianMotion.py  brownian.py  config.py
python_backtesting_engine/src/python_backtesting_engine/Coinbase_Fetcher/: FetchCoinbaseData.py
python_backtesting_engine/src/python_backtesting_engine/data/: brownian_data.csv
