# pyproject.toml

[build-system]
requires = [
    "setuptools",
    "wheel",
]
build-backend = "setuptools.build_meta"

[project]
name="python_backtesting_engine"
version="4.0.7"
authors=[
  { name="Michael Vitucci", email="author@example.com" },
]
description="Backtest your own algo, fetch Coinbase data, and generate Brownian data"
readme = "README.md"
license= { file="LICENSE" }
requires-python = ">=3.6"
classifiers=[
    "Programming Language :: Python",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "setuptools",
    "matplotlib",
    "numpy",
    "pandas",
    "scipy",
    "requests",
    "PyQt5"
]

[project.urls]
"Homepage" = "https://github.com/michael-vitucci3/BacktestingEngine"